Add pvc yaml and Update Readme

--- a/job/client.yaml
+++ b/job/client.yaml
@@ -64,4 +64,4 @@ spec:
       volumes:
       - name: tfcluster-data-0
         persistentVolumeClaim:
-          claimName: bigdata
+          claimName: pvcvolume
