--- a/replicaset/tfboard.yaml
+++ b/replicaset/tfboard.yaml
@@ -53,4 +53,4 @@ spec:
       volumes:
       - name: tfcluster-data-0
         persistentVolumeClaim:
-          claimName: bigdata
+          claimName: pvcvolume
