--- a/statefulset/ps.yaml
+++ b/statefulset/ps.yaml
@@ -59,4 +59,4 @@ spec:
       volumes:
       - name: tfcluster-data-0
         persistentVolumeClaim:
-          claimName: bigdata
+          claimName: pvcvolume
